--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                                 <div class="articles__slide swiper-slide">
                                     <div class="articles__item">
                                         <div class="articles__img">
-                                            <img src="/assets/imgs/slide1.png" alt="slide">
+                                            <img src="assets/imgs/slide1.png" alt="slide">
                                         </div>
                                         <div class="articles__subtext">
                                             <p>Особености планирования прямой кухни</p>
@@ -537,7 +537,7 @@
                                 <div class="articles__slide swiper-slide">
                                     <div class="articles__item">
                                         <div class="articles__img">
-                                            <img src="/assets/imgs/slide1.png" alt="slide">
+                                            <img src="assets/imgs/slide1.png" alt="slide">
                                         </div>
                                         <div class="articles__subtext">
                                             <p>Ваш интерьер в 3D студии Egger</p>
@@ -547,7 +547,7 @@
                                 <div class="articles__slide swiper-slide">
                                     <div class="articles__item">
                                         <div class="articles__img">
-                                            <img src="/assets/imgs/slide1.png" alt="slide">
+                                            <img src="assets/imgs/slide1.png" alt="slide">
                                         </div>
                                         <div class="articles__subtext">
                                             <p>Особености планирования прямой кухни</p>
@@ -557,7 +557,7 @@
                                 <div class="articles__slide swiper-slide">
                                     <div class="articles__item">
                                         <div class="articles__img">
-                                            <img src="/assets/imgs/slide1.png" alt="slide">
+                                            <img src="assets/imgs/slide1.png" alt="slide">
                                         </div>
                                         <div class="articles__subtext">
                                             <p>Наполнение шкафа под разные задачи</p>
@@ -567,7 +567,7 @@
                                 <div class="articles__slide swiper-slide">
                                     <div class="articles__item">
                                         <div class="articles__img">
-                                            <img src="/assets/imgs/slide1.png" alt="slide">
+                                            <img src="assets/imgs/slide1.png" alt="slide">
                                         </div>
                                         <div class="articles__subtext">
                                             <p>Особености планирования прямой кухни</p>
@@ -577,7 +577,7 @@
                                 <div class="articles__slide swiper-slide">
                                     <div class="articles__item">
                                         <div class="articles__img">
-                                            <img src="/assets/imgs/slide1.png" alt="slide">
+                                            <img src="assets/imgs/slide1.png" alt="slide">
                                         </div>
                                         <div class="articles__subtext">
                                             <p>Особености планирования прямой кухни</p>
