--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     </div>
                     <div class="slider-catalog__slider swiper">
                         <div class="slider-catalog__slider-wrapper swiper-wrapper">
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -209,7 +209,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -220,7 +220,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -231,7 +231,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -242,7 +242,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -253,7 +253,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -264,7 +264,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -275,7 +275,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -299,7 +299,7 @@
                     </div>
                     <div class="slider-catalog__slider swiper">
                         <div class="slider-catalog__slider-wrapper swiper-wrapper">
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -310,7 +310,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -321,7 +321,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -332,7 +332,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -343,7 +343,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -354,7 +354,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -365,7 +365,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
@@ -376,7 +376,7 @@
                                     </span>
                                 </div>
                             </a>
-                            <a href="#" class="slider-catalog__slide swiper-slide">
+                            <a href="/product.html" class="slider-catalog__slide swiper-slide">
                                 <div class="img">
                                     <img src="assets/imgs/cat1.png" alt="">
                                     <img class="hover-img" src="assets/imgs/cat2.png" alt="">
